<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_margin"
    android:layout_marginLeft="@dimen/activity_margin"
    android:layout_marginRight="@dimen/activity_margin"
    android:layout_marginTop="@dimen/activity_margin"
    android:orientation="vertical"
    tools:context="com.example.android.habittracker.MainActivity">

    <TextView
        android:id="@+id/weekday"
        style="@style/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing"
        android:text="@string/weekday" />

    <TextView
        android:id="@+id/text_header"
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing"
        android:text="@string/done_today" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing"
        android:orientation="horizontal">

        <TextView
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/done_1" />

        <Spinner
            android:id="@+id/spinner_jogging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginStart="@dimen/activity_margin"
            android:spinnerMode="dropdown">

        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing"
        android:orientation="horizontal">

        <TextView
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/done_2" />

        <Spinner
            android:id="@+id/spinner_swimming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginStart="@dimen/activity_margin"
            android:spinnerMode="dropdown">

        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing"
        android:orientation="horizontal">

        <TextView
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/done_3" />

        <EditText
            android:id="@+id/student"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_weight="1"
            android:hint="@string/student"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing"
        android:orientation="horizontal">

        <TextView
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/done_4" />

        <Spinner
            android:id="@+id/spinner_french"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginStart="@dimen/activity_margin"
            android:spinnerMode="dropdown">

        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_ok"
            style="@style/ButtonOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_marginTop="@dimen/spacing"
            android:text="@string/button_ok" />

        <Button
            android:id="@+id/button_next_day"
            style="@style/ButtonNextDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_marginTop="@dimen/spacing"
            android:text="@string/button_next_day" />

    </LinearLayout>

    <TextView
        style="@style/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing"
        android:layout_marginTop="@dimen/spacing"
        android:text="@string/recap_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/Columns"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

            <TextView
                style="@style/Columns"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/column_1" />

            <TextView
                style="@style/Columns"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/column_2" />

            <TextView
                style="@style/Columns"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/column_3" />

            <TextView
                style="@style/Columns"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/column_4" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>
